@@ -1,16 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-<descriptor>
-
-<version>
-    16.12.1
-</version>
-
-<headers>
-    /usr/include/okular/core/
-</headers>
-
-<libs>
-    /usr/lib/@@DEB_HOST_MULTIARCH@@/libOkular5Core.so
-</libs>
-
-</descriptor>
